--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Meteo Web</title>
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css">
 </head>
 <body>
 
@@ -25,9 +26,12 @@
         </form>
 
         <div id="results" class="mt-3"></div>
+        <hr>
+        <div id="map"></div>
     </main>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
     <script src="app.js"></script>
     
 </body>
