--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
     
 </body>
 </html>
