Ajout d'une config webpack

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
         <div id="map"></div>
     </main>
 
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
-    <script src="app.js" type="module"></script>
+   <script src="dist/bundle.js"></script>
     
 </body>
 </html>
