Ajout d'un webpack-dev-server

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="map"></div>
     </main>
 
-   <script src="dist/bundle.js"></script>
+   <script src="bundle.js"></script>
     
 </body>
 </html>
